Fix tag group wrapping

--- a/src/bootstrap/tag-group.scss
+++ b/src/bootstrap/tag-group.scss
@@ -8,7 +8,7 @@
 
 .tag-group-tags {
     display: flex;
-    flex-wrap: true;
+    flex-wrap: wrap;
     gap: 0.25em;
 }
 
